# MemoryGrid

./: .env.example  .gitignore  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
api/: claude.ts
scripts/: make-icons.mjs
src/: App.tsx  index.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src/components/: ClaudePanel.tsx  CommandPalette.tsx  Editor.tsx  ErrorBoundary.tsx  GalaxyView.tsx  GraphView.tsx  ImportModal.tsx  Sidebar.tsx
src/lib/: supabase.ts  wikilinks.ts
src/store/: useStore.ts
supabase/: schema.sql
